[tool.poetry]
name = "traveler"
version = "0.1.0"
description = ""
authors = ["Joe Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
voluptuous = "^0.15.2"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
flask-migrate = "^4.0.7"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
flask-pydantic = "^0.12.0"
tenacity = "^9.0.0"
gevent = "21.12.0"
delorean = "^1.0.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
