[tool.poetry]
name = "traveler"
version = "0.1.0"
description = ""
authors = ["Joe Huang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
voluptuous = "^0.13.1"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
blinker = "^1.5"
Delorean = "^1.0.0"
Flask-Migrate = "^3.1.0"
psycopg2-binary = "^2.9.3"
gevent = "^21.12.0"
pydantic = "^1.10.2"
Flask-Pydantic = "^0.11.0"
tenacity = "^8.2.2"
sqlalchemy = "1.4.46"
flask = "2.0.3"
werkzeug = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
